@@ -1,3 +1,13 @@
+openssl (0.9.8h-6.syslogng32.1.4) syslogngdeps20security; urgency=low
+
+  * Fixed CVE-2010-4180
+    Disable code workaround for ancient and obsolete Netscape browsers
+    and servers: an attacker can use it in a ciphersuite downgrade attack.
+    Thanks to Martin Rex for discovering this bug. CVE-2010-4180
+    [Steve Henson]
+
+ -- Emese Revfy <ganesa@balabit.hu>  Fri, 04 Feb 2011 11:09:41 +0100
+
 openssl (0.9.8h-6.syslogng32.1.3) syslogngdeps20security; urgency=low
 
   * Fixed CVE-2008-7270
